Fix project card spacing

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -14,6 +14,7 @@
       display: flex;
       padding: 16px;
       align-items: center;
+      justify-content: space-between;
       min-height: 77px;
 
       .title {
